# fogo

Tese/: texify_it.bat
Tese/bib/: referencias.bib
Tese/source/: fogo_tese_mestrado.tex  fogo_tese_mestrado_Agradecimentos.tex  fogo_tese_mestrado_Anexos.tex  fogo_tese_mestrado_Conclusao.tex  fogo_tese_mestrado_Dedicatoria.tex  fogo_tese_mestrado_Discussao.tex  fogo_tese_mestrado_Glossario.tex  fogo_tese_mestrado_Introducao.tex  fogo_tese_mestrado_Metodologia.tex  fogo_tese_mestrado_Modelagem.tex  fogo_tese_mestrado_NFuncionais.tex  fogo_tese_mestrado_Resultados.tex  fogo_tese_mestrado_RevisaoLit.tex
csc_new/: .cdtbuild_initial  .cproject  .project  .project_initial  CMakeLists.txt
csc_new/Debug/: makefile
csc_new/Debug/Source/: App.d  subdir.mk
csc_new/Debug/Source/kipl-base/: base.d  error.d  image.d  loadsavemanager.d  subdir.mk
csc_new/Debug/Source/kipl-csc/: islhierarchy.d  subdir.mk  trafficsigncolsim.d  trafficsignlinkcontrol.d
csc_new/Debug/Source/kipl-segmentation/: segm-stat.d  subdir.mk
csc_new/Debug/Source/kipl-transform/: color-transform.d  subdir.mk
csc_new/Include/kipl-base/: base.h  color.h  error.h  image.h  iterators.h  loadsavemanager.h  types.h
csc_new/Include/kipl-csc/: codebase.h  csc.h  cscengine.h  csctypes.h  islhierarchy.h  stdrgblinkcontrol.h  trafficsigncolsim.h  trafficsignlinkcontrol.h
csc_new/Include/kipl-segmentation/: segm-stat.h
csc_new/Include/kipl-transform/: color-transform.h
csc_new/Include/kipl-util/: queue.h
csc_new/Release/: makefile  objects.mk  sources.mk
csc_new/Release/Source/: App.d  subdir.mk
csc_new/Release/Source/kipl-base/: base.d  error.d  image.d  loadsavemanager.d  subdir.mk
csc_new/Release/Source/kipl-csc/: islhierarchy.d  subdir.mk  trafficsigncolsim.d  trafficsignlinkcontrol.d
csc_new/Release/Source/kipl-segmentation/: segm-stat.d  subdir.mk
csc_new/Release/Source/kipl-transform/: color-transform.d  subdir.mk
csc_new/Source/: App.cpp  App.hpp  OneParamReader.hpp
csc_new/Source/kipl-base/: base.cpp  error.cpp  image.cpp  loadsavemanager.cpp
csc_new/Source/kipl-csc/: islhierarchy.cpp  trafficsigncolsim.cpp  trafficsignlinkcontrol.cpp
csc_new/Source/kipl-segmentation/: segm-stat.cpp
csc_new/Source/kipl-transform/: color-transform.cpp
edison_exe/: CMakeLists.txt
edison_exe/Release/: CMakeLists.txt
edison_exe/Source/: App.cpp  App.hpp  OneParamReader.hpp
edison_lib/: CMakeLists.txt
edison_lib/Release/: CMakeLists.txt
edison_lib/Source/prompt/: edison.cpp
edison_lib/Source/segm/: msImageProcessor.cpp
gnm2/: CMakeLists.txt
gnm2/debug/: CMakeLists.txt
gnm2/include/: colorspace.hpp  teste.hpp  teste2.hpp
gnm2/include/argtable2/: config.h
gnm2/include/gnm/: algorithm.hpp  anglevertices.hpp  controller.hpp
gnm2/release/: CMakeLists.txt
gnm2/source/: main.cpp
gnm2/source/gnm/: algorithm.cpp  controller.cpp
gnm_exe/tags/1.0.0/Doc/: sample.cfg
gnm_exe/tags/1.0.0/Include/app/: GNMParamsReader.hpp
gnm_exe/tags/1.0.0/Release/: CMakeLists.txt
gnm_exe/tags/1.0.0/Source/: icon.rc
gnm_exe/trunk/: CMakeLists.txt
gnm_exe/trunk/Doc/: README  gnm.settings
gnm_exe/trunk/Include/app/: ConsoleGNM.hpp  GNMCfgReader.hpp
gnm_exe/trunk/Source/app/: ConsoleGNM.cpp
gnm_lib/tags/1.0.0/Include/gnm/: Segmentation.hpp
gnm_lib/trunk/: CMakeLists.txt
gnm_lib/trunk/Debug/: CMakeLists.txt
gnm_lib/trunk/Include/gnm/: Metaregion.hpp
gnm_lib/trunk/Source/gnm/: Metaregion.cpp  Segmentation.cpp
image_indices/: CR.m  CRandER.m  Untitled.asv  Untitled.m  WS_EvaluationTests.asv  WS_EvaluationTests.m  WS_ProcessDataSet.asv  WS_ProcessDataSet.m  WS_ProcessDataSet_fogo_01.m  WS_evaluateDataSet.m  berkeleyImLoad.m  berkeleyImLoadBySegments.m  calcDistanceIndexes.m  calcNxx2.m  cardinalityMatrix.m  confusionMat.m  constructDirList.m  dirHammingDist.m  generateImageIndexes.m  howManySegments.m  howManySegments2.m  im2segs.m  im2segs2.m  im2segs3.m  imintersect.m  imintersect2.m  imunion.m  maxIntersectMod.m  modimintersect.m  pathdef.m  scriptWS.m  showSeg.m  split_lines.m
imgtoseg_exe/tags/1.0.0/: CMakeLists.txt
imgtoseg_exe/tags/1.0.0/Debug/: CMakeLists.txt
imgtoseg_exe/tags/1.0.0/Source/: App.hpp
imgtoseg_exe/trunk/Source/: App.cpp
labeling_lib/tags/1.0.0/Debug/: CMakeLists.txt
labeling_lib/tags/1.0.0/Include/Graph/: GraphLabeling.hpp
labeling_lib/tags/1.0.0/Include/Labeling/: Labeling.hpp  Region.hpp
labeling_lib/tags/1.0.0/Source/Graph/: GraphLabeling.cpp
labeling_lib/tags/1.0.0/Source/Labeling/: Labeling.cpp  Region.cpp
labeling_lib/tags/1.0.0/Source/SegFormat/: SegFormatLabeling.cpp
labeling_lib/trunk/: CMakeLists.txt
labeling_lib/trunk/Include/Graph/: Edge.hpp  GraphLabeling.hpp
labeling_lib/trunk/Include/Labeling/: Labeling.hpp  Region.hpp
labeling_lib/trunk/Include/SegFormat/: SegFormatLabeling.hpp
labeling_lib/trunk/Source/Graph/: GraphLabeling.cpp
labeling_lib/trunk/Source/Labeling/: Labeling.cpp  Region.cpp
ndiffusion_lib/: CMakeLists.txt  ndiffusion.doxyfile
ndiffusion_lib/debug/: CMakeLists.txt
ndiffusion_lib/include/ndiffusion/: colors.hpp  image.hpp  ndiffusion.hpp  utils.hpp
ndiffusion_lib/release/: CMakeLists.txt
ndiffusion_lib/source/ndiffusion/: ndiffusion.cpp
utils_lib/tags/1.0.0/Include/Color/: ColorspaceUtil.hpp
utils_lib/tags/1.0.0/Include/Verbose/: VerboseUtil.hpp
utils_lib/tags/1.0.0/Source/Color/: ColorspaceUtil.cpp
utils_lib/trunk/: CMakeLists.txt
utils_lib/trunk/Release/: CMakeLists.txt
utils_lib/trunk/Source/Verbose/: VerboseUtil.cpp
