PROJECT (CSC_EXE)

OPTION ( BUILD_DEBUG "BUILD DEBUG?" OFF)
SET ( FOGOUTILS_LIB "" CACHE FILEPATH "FOGOUTILS LIBRARY FILE NAME:")
SET ( FOGOUTILS_LIB_DIR "" CACHE FILEPATH "FOGOUTILS LIBRARY DIRECTORY:")
SET ( FOGOUTILS_LIB_INCLUDE "" CACHE PATH "FOGOUTILS LIBRARY INCLUDE DIRECTORY:")

IF (BUILD_DEBUG)
  SET (CMAKE_BUILD_TYPE debug)
  ADD_SUBDIRECTORY (Debug)
ELSE (BUILD_DEBUG)
  SET (CMAKE_BUILD_TYPE optimized)
  ADD_SUBDIRECTORY (Release)
ENDIF (BUILD_DEBUG)