PROJECT (GNM2)

OPTION ( BUILD_DEBUG "BUILD DEBUG?" OFF)

#SET ( REGIONPROPS_LIB "" CACHE FILEPATH "REGIONPROPS LIBRARY FILE NAME:")
#SET ( REGIONPROPS_LIB_DIR "" CACHE FILEPATH "REGIONPROPS LIBRARY DIRECTORY:")
#SET ( REGIONPROPS_LIB_INCLUDE "" CACHE PATH "REGIONPROPS LIBRARY INCLUDE DIRECTORY:")

SET ( IMGMAN_LIB "" CACHE FILEPATH "IMGMAN LIBRARY FILE NAME:")
SET ( IMGMAN_LIB_DIR "" CACHE FILEPATH "IMGMAN LIBRARY DIRECTORY:")
SET ( IMGMAN_LIB_INCLUDE "" CACHE PATH "IMGMAN LIBRARY INCLUDE DIRECTORY:")

SET ( LABELING_LIB "" CACHE FILEPATH "LABELING LIBRARY FILE NAME:")
SET ( LABELING_LIB_DIR "" CACHE FILEPATH "LABELING LIBRARY DIRECTORY:")
SET ( LABELING_LIB_INCLUDE "" CACHE PATH "LABELING LIBRARY INCLUDE DIRECTORY:")

IF (BUILD_DEBUG)
  SET (CMAKE_BUILD_TYPE debug)
  ADD_SUBDIRECTORY (debug)
ELSE (BUILD_DEBUG)
  SET (CMAKE_BUILD_TYPE release)
  ADD_SUBDIRECTORY (release)
ENDIF (BUILD_DEBUG)
