PROJECT (NDIFFUSION)

OPTION ( BUILD_DEBUG "BUILD DEBUG?" OFF)

SET ( IMGMAN_LIB_INCLUDE "" CACHE PATH "IMGMAN LIBRARY INCLUDE DIRECTORY:")

IF (BUILD_DEBUG)
  SET (CMAKE_BUILD_TYPE debug)
  ADD_SUBDIRECTORY (debug)
ELSE (BUILD_DEBUG)
  SET (CMAKE_BUILD_TYPE release)
  ADD_SUBDIRECTORY (release)
ENDIF (BUILD_DEBUG)
