PROJECT (GNM_LIB)

OPTION ( BUILD_DEBUG "BUILD DEBUG?" OFF)
SET ( LABELING_LIB "" CACHE FILEPATH "LABELING LIBRARY FILE NAME:")
SET ( LABELING_LIB_DIR "" CACHE FILEPATH "LABELING LIBRARY DIRECTORY:")
SET ( LABELING_LIB_INCLUDE "" CACHE PATH "LABELING LIBRARY INCLUDE DIRECTORY:")
SET ( FOGOUTILS_LIB "" CACHE FILEPATH "FOGOUTILS LIBRARY FILE NAME:")
SET ( FOGOUTILS_LIB_DIR "" CACHE FILEPATH "FOGOUTILS LIBRARY DIRECTORY:")
SET ( FOGOUTILS_LIB_INCLUDE "" CACHE PATH "FOGOUTILS LIBRARY INCLUDE DIRECTORY:")

IF (BUILD_DEBUG)
  SET (CMAKE_BUILD_TYPE debug)
  ADD_SUBDIRECTORY (Debug)
ELSE (BUILD_DEBUG)
  SET (CMAKE_BUILD_TYPE optimized)
  ADD_SUBDIRECTORY (Release)
ENDIF (BUILD_DEBUG)