PROJECT (IMGTOSEG_EXE)

OPTION ( BUILD_DEBUG "BUILD DEBUG?" OFF)
SET ( LABELING_LIB "" CACHE FILEPATH "LABELING LIBRARY FILE NAME:")
SET ( LABELING_LIB_DIR "" CACHE FILEPATH "LABELING LIBRARY DIRECTORY:")
SET ( LABELING_LIB_INCLUDE "" CACHE PATH "LABELING LIBRARY INCLUDE DIRECTORY:")

IF (BUILD_DEBUG)
  SET (CMAKE_BUILD_TYPE debug)
  ADD_SUBDIRECTORY (Debug)
ELSE (BUILD_DEBUG)
  SET (CMAKE_BUILD_TYPE optimized)
  ADD_SUBDIRECTORY (Release)
ENDIF (BUILD_DEBUG)